# unlearning

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.claude/prompts/: README.md
.claude/prompts/01-project/: analyze-dependencies.md  analyze-structure.md  create-claude-md.md
.claude/prompts/02-history/: current-branch-diff.md  file-history.md  summarize-git-log.md
.claude/prompts/03-understanding/: explain-function.md  trace-data-flow.md
.claude/prompts/04-debugging/: analyze-bug.md  explain-error.md
.claude/prompts/05-coding/: follow-existing-pattern.md  implement-feature.md
.claude/prompts/06-refactoring/: code-review.md  plan-large-refactor.md
.claude/prompts/07-testing/: analyze-coverage.md  write-tests.md
.claude/prompts/08-docs/: document-api.md  write-readme.md
.claude/prompts/09-performance/: find-bottlenecks.md
.claude/prompts/10-security/: security-review.md
SISA-unlearning/: CLAUDE.md  Makefile  main.py
SISA-unlearning/dashboard/: app.py
SISA-unlearning/dashboard/core/: mock_data.py  sisa.py
SISA-unlearning/dashboard/pages/: 2_망각요청.py  3_결과비교.py
SISA-unlearning/src/: dataset.py  evaluate.py  model.py  train.py  unlearn.py
dashboard/core/: mock_data.py  state.py
dashboard/pages/: 1_모니터링.py  4_논문재현.py
src/: dataset.py  evaluate.py  model.py  train.py  unlearn.py
