[project]
name = "sisa-unlearning"
version = "0.1.0"
description = "SISA Training: Machine Unlearning via Sharded, Isolated, Sliced, and Aggregated training"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "datasets>=2.18.0",
    "wandb>=0.16.0",
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
    "streamlit>=1.58.0",
    "plotly>=6.8.0",
    "pandas>=3.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]
